--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -6,6 +6,14 @@ application.desc=A simple java desktop application based on Swing Application Fr
 application.homepage=http://appframework.dev.java.net
 application.title=Basic Application Example
 application.vendor=Sun Microsystems Inc.
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.eclipseFormatterActiveProfile=
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.eclipseFormatterEnabled=false
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.eclipseFormatterLocation=
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.enableFormatAsSaveAction=false
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.preserveBreakPoints=true
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.showNotifications=true
+auxiliary.de-markiewb-netbeans-plugins-eclipse-formatter.useProjectSettings=false
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -29,9 +37,10 @@ excludes=
 file.reference.mysql-connector-java-5.0.8-bin.jar=../../../Downloads/Thurpe/PC Softwares/Programming/mysql-connector-java-5.0.8-bin.jar
 file.reference.rs2xml.jar=rs2xml.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.swing-app-framework.classpath}:\
     ${libs.MySQLDriver.classpath}:\
     ${libs.beans-binding.classpath}:\
     ${file.reference.rs2xml.jar}
@@ -58,7 +67,20 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=TgsSystem.TgsMainFrame
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
